tests/ui/consts/const_in_pattern/reject_non_structural.stderr
error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:40:36
   |
LL |     const ENUM: Derive<NoDerive> = Derive::Some(NoDerive);
   |     ---------------------------- constant defined here
LL |     match Derive::Some(NoDerive) { ENUM => dbg!(ENUM), _ => panic!("whoops"), };
   |                                    ^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:46:28
   |
LL |     const FIELD: OND = TrivialEq(Some(NoDerive)).0;
   |     ---------------- constant defined here
LL |     match Some(NoDerive) { FIELD => dbg!(FIELD), _ => panic!("whoops"), };
   |                            ^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:53:27
   |
LL |     const INDIRECT: OND = NO_DERIVE_SOME;
   |     ------------------- constant defined here
LL |     match Some(NoDerive) {INDIRECT => dbg!(INDIRECT), _ => panic!("whoops"), };
   |                           ^^^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:59:36
   |
LL |     const TUPLE: (OND, OND) = (None, Some(NoDerive));
   |     ----------------------- constant defined here
LL |     match (None, Some(NoDerive)) { TUPLE => dbg!(TUPLE), _ => panic!("whoops"), };
   |                                    ^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:65:28
   |
LL |     const TYPE_ASCRIPTION: OND = type_ascribe!(Some(NoDerive), OND);
   |     -------------------------- constant defined here
LL |     match Some(NoDerive) { TYPE_ASCRIPTION => dbg!(TYPE_ASCRIPTION), _ => panic!("whoops"), };
   |                            ^^^^^^^^^^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:71:36
   |
LL |     const ARRAY: [OND; 2] = [None, Some(NoDerive)];
   |     --------------------- constant defined here
LL |     match [None, Some(NoDerive)] { ARRAY => dbg!(ARRAY), _ => panic!("whoops"), };
   |                                    ^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:77:33
   |
LL |     const REPEAT: [OND; 2] = [Some(NoDerive); 2];
   |     ---------------------- constant defined here
LL |     match [Some(NoDerive); 2] { REPEAT => dbg!(REPEAT), _ => panic!("whoops"), };
   |                                 ^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:84:28
   |
LL |     trait Trait: Sized { const ASSOC: Option<Self>; }
   |     ------------------   ------------------------- constant defined here
LL |     impl Trait for NoDerive { const ASSOC: Option<NoDerive> = Some(NoDerive); }
LL |     match Some(NoDerive) { NoDerive::ASSOC => dbg!(NoDerive::ASSOC), _ => panic!("whoops"), };
   |                            ^^^^^^^^^^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:90:28
   |
LL |     const BLOCK: OND = { NoDerive; Some(NoDerive) };
   |     ---------------- constant defined here
LL |     match Some(NoDerive) { BLOCK => dbg!(BLOCK), _ => panic!("whoops"), };
   |                            ^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `NoDerive` in a pattern, `NoDerive` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/reject_non_structural.rs:96:29
   |
LL |     const ADDR_OF: &OND = &Some(NoDerive);
   |     ------------------- constant defined here
LL |     match &Some(NoDerive) { ADDR_OF => dbg!(ADDR_OF), _ => panic!("whoops"), };
   |                             ^^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 10 previous errors

